--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
- 
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -1250,20 +1250,29 @@
 								<ul class="slides">
 									<li>
 										<h1>LPI-Prüfungen - Zertifikate belegen Fachwissen</h1>
-										<p class="lead">Das <a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank">Linux Professional Institute (LPI)</a> bietet <a href="https://lpievent.lpice.eu" target="_blank">LPI-Prüfungen zu stark vergünstigten Konditionen</a> ab 60 Euro, inklusive Eintritt zum OpenTechSummit an.</p><p class="lead">Bitte <a href="https://lpievent.lpice.eu" target="_blank">hier registrieren</a>.</p>
-										<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn.</p>
+										<p class="lead"><p class="lead">Das <a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank">Linux Professional Institute (LPI)</a> bietet <a href="https://lpievent.lpice.eu" target="_blank">LPI-Prüfungen zu stark vergünstigten Konditionen</a> ab 60 Euro, inklusive Eintritt zum OpenTechSummit an.</p><p class="lead">Bitte <a href="https://lpievent.lpice.eu" target="_blank">hier registrieren</a>.</p>
+		<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn.</p></p>
 									</li>
 									
 									<li>
 										<h1>LPI-Prüfungen</h1>
-										<p class="lead">Folgende Examen nehmen die Prüfer am 14. Mai ab:&nbsp;</p><p class="lead"><p class="lead">* LPI Linux Essentials - auf Deutsch und Englisch</br>* LPIC-1 und LPIC-2 (De/En)</br>* LPIC-3 (En)</br>* Univention Certified Professional Prüfung (LPI 198) (En)
-										<p class="lead">Die Prüfungen dauern zwei Stunden inklusive Vorbereitung. <a href="https://lpievent.lpice.eu" target="_blank">Registrierung hier</a>.</p>
+										<p class="lead"><li class="flex-active-slide"><p class="lead">Folgende Examen nehmen die Prüfer am 14. Mai ab:&nbsp;</p><p class="lead">* LPI Linux Essentials - auf Deutsch und Englisch<br>* LPIC-1 und LPIC-2 (De/En)<br>* LPIC-3 (En)<br>* Univention Certified Professional Prüfung (LPI 198) (En)
+		</p><p class="lead">Die Prüfungen dauern zwei Stunden inklusive Vorbereitung. <a href="https://lpievent.lpice.eu" target="_blank">Registrierung hier</a>.</p>
+		</li><p class="bodytext">
+		</p><li>
+		<h1>Zertifizierte Linux-Prüfung</h1>
+		<p class="lead">Die vergünstigten Gebühren ab 60 Euro inklusive Eintritt zum OpenTechSummit erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Registrierungsseite.</a> Bitte bezahlen Sie vor Ort in Bar und bringen Sie Lichtbildausweis und gültige LPI-Nummer, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a>.</p>
+		<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im 
+		LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn. Weitere Details zu 
+		den Pr</p></li></p>
 									</li>
 									
 									<li>
 										<h1>Zertifizierte Linux-Prüfung</h1>
-										<p class="lead">Die vergünstigten Gebühren ab 60 Euro inklusive Eintritt zum OpenTechSummit erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Registrierungsseite.</a> Bitte bezahlen Sie vor Ort in Bar und bringen Sie Lichtbildausweis und gültige LPI-Nummer, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a><span>.</p>	
-										<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn. Weitere Details zu den Prüfungsversionen auf <a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">Deutsch</a> und auf <a href="http://www.lpi.org/linux-certifications" target="_blank">Englisch</a></p>
+										<p class="lead"><p class="lead">Die vergünstigten Gebühren ab 60 Euro inklusive Eintritt zum OpenTechSummit erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Registrierungsseite.</a> Bitte bezahlen Sie vor Ort in Bar und bringen Sie Lichtbildausweis und gültige LPI-Nummer mit, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a>.</p>
+		<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im 
+		LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn. Weitere Details zu 
+		den Prüfungsversionen auf <a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">Deutsch</a> und auf <a href="http://www.lpi.org/linux-certifications" target="_blank">Englisch</a></p> </p>
 									</li>
 								</ul>
 							</div>
