--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 								<div class="speaker-description">
 									<h2>Frank Lanitz<br></h2>
 									<span class="sub">Entwickler Geany Entwicklungsumgebung</span>
-									<p>Frank ist einer der Kernentwickler der Entwicklungsumbegbung Geany. Er hat zahlreiche Plugins geschrieben u.a. für Latex, Sendmail, Updatechecker, Tableconcert. Er ist Mitgründer des Hackspace Jena und bei Freifunk aktiv.</p>
+									<p>Frank ist einer der Kernentwickler der Entwicklungsumgebung Geany. Er hat zahlreiche Plugins geschrieben u.a. für Latex, Sendmail, Updatechecker, Tableconcert. Er ist Mitgründer des Hackspace Jena und bei Freifunk aktiv.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
