--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -585,6 +586,41 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
+										<img class="background-image" alt="Thomas Tursics" src="img/ThomasTursics.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/tursics"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/thomastursics"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Thomas Tursics<br></h2>
+									<span class="sub">Open Data Entwickler</span>
+									<p>Thomas ist ein OpenData-verrückter Entwickler aus Berlin. Er hat Android und Firefox-Apps entwickelt wie BabyBenamsen und EthnoTier und baut Webseiten wie KiezKarte und Wartezeiten auf Grundlage offener Daten.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Frank Lanitz" src="img/FrankLanitz.jpg">
+										
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Frank Lanitz<br></h2>
+									<span class="sub">Entwickler Geany Entwicklungsumgebung</span>
+									<p>Frank ist einer der Kernentwickler der Entwicklungsumgebung Geany. Er hat zahlreiche Plugins geschrieben u.a. für Latex, Updatechecker, Tableconvert und kümmert sich um die Übersetzungen von Geany. Er ist Mitgründer des Hackspace Jena und hilft bei Freifunk.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
 										<img class="background-image" alt="Yannick Haan" src="img/YannickHaan.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -625,20 +661,20 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Thomas Tursics" src="img/ThomasTursics.jpg">
+										<img class="background-image" alt="André Fiedler" src="img/AndreFiedler.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/tursics"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/thomastursics"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/sonnenkiste"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/andr%C3%A9-fiedler/63/a73/54a/en"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
 								</div>
 		
 								<div class="speaker-description">
-									<h2>Thomas Tursics<br></h2>
-									<span class="sub">Open Data Entwickler</span>
-									<p>Thomas ist ein OpenData-verrückter Entwickler aus Berlin. Er hat Android und Firefox-Apps entwickelt wie BabyBenamsen und EthnoTier und baut Webseiten wie KiezKarte und Wartezeiten auf Grundlage offener Daten.</p>
+									<h2>André Fiedler<br></h2>
+									<span class="sub">FirefoxOS Apps</span>
+									<p>André ist Mozillian und Entwickler für Mobilapplikationen. Er arbeitet an Anwendungen für das Internet der Dinge. Momentan ist sein Fokus eine Waschmaschinen-App um Strom und Wasser zu sparen.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -685,26 +721,6 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="André Fiedler" src="img/AndreFiedler.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/sonnenkiste"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/pub/andr%C3%A9-fiedler/63/a73/54a/en"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>André Fiedler<br></h2>
-									<span class="sub">FirefoxOS Apps</span>
-									<p>André ist Mozillian und Entwickler für Mobilapplikationen. Er arbeitet an Anwendungen für das Internet der Dinge. Momentan ist sein Fokus eine Waschmaschinen-App um Strom und Wasser zu sparen.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
 										<img class="background-image" alt="Nicco Kunzmann" src="img/NiccoKunzmann.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -719,26 +735,6 @@
 									<h2>Nicco Kunzmann<br></h2>
 									<span class="sub">CoderDojo</span>
 									<p>Nicco Kunzmann organisiert Coder Dojos - Klubs für Kinder und Jugendliche, um programmieren zu lernen. Es ist zudem möglich mit Arduinos eigene Hardware-Anwendungen zu bauen, wie z.B. eine Ampelsteuerung mit roten, gelben und grünen LEDs. Mentoren sind da zur Betreuung.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Manuel Schneider" src="img/ManuelSchneider.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/x80686"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/80686"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Manuel Schneider<br></h2>
-									<span class="sub">Wikipedia Video</span>
-									<p>Manuel nutzt seit 1995 Linux. Er ist an zahlreichen freien Software- und Open Knowledge-Projekten beteiligt. Er ist ein IT-Autodikakt mit einem Abschluss als Diplom-Ingenieur in Informatik. Er ist Wikipedianer seit 2004, Video-Enthusiast, Initiator des WikiTV-Projekts und Kreativdirektor hinter dem Videoschnitt-Server.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -867,15 +863,20 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Frank Lanitz" src="img/FrankLanitz.jpg">
-										
+										<img class="background-image" alt="Manuel Schneider" src="img/ManuelSchneider.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/x80686"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/80686"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
 									</div>
 								</div>
 		
 								<div class="speaker-description">
-									<h2>Frank Lanitz<br></h2>
-									<span class="sub">Entwickler Geany Entwicklungsumgebung</span>
-									<p>Frank ist einer der Kernentwickler der Entwicklungsumgebung Geany. Er hat zahlreiche Plugins geschrieben u.a. für Latex, Sendmail, Updatechecker, Tableconcert. Er ist Mitgründer des Hackspace Jena und bei Freifunk aktiv.</p>
+									<h2>Manuel Schneider<br></h2>
+									<span class="sub">Wikipedia Video</span>
+									<p>Manuel nutzt seit 1995 Linux. Er ist an zahlreichen freien Software- und Open Knowledge-Projekten beteiligt. Er ist ein IT-Autodikakt mit einem Abschluss als Diplom-Ingenieur in Informatik. Er ist Wikipedianer seit 2004, Video-Enthusiast, Initiator des WikiTV-Projekts und Kreativdirektor hinter dem Videoschnitt-Server.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
