--- a/en.html
+++ b/en.html
@@ -159,7 +159,7 @@
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									
-									<h1 class="large-h1 text-white"><span>14th May Berlin</span><div>Kids and everyone who like technologies enjoying the new possibilities with opentech.</div></h1>
+									<h1 class="large-h1 text-white"><span>14th May Berlin</span><div>Kids and everyone who likes technologies enjoying the new possibilities with opentech.</div></h1>
 									<span class="lead text-white">Free access to code and hardware schematics enables new ideas. Copying, Changing, Mixing, Sharing. Ja! <br><br>At the OpenTechSummit we learn how to do it.<br></span>
 								</div>
 								
