--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -835,7 +836,7 @@
 								<div class="speaker-description">
 									<h2>Simon Meggle<br></h2>
 									<span class="sub">Sakuli Monitoring Specialist</span>
-									<p>Simon Meggle arbeitet bei der Münchner ConSol*, wo er Kunden bei allen Themen rund um Open-Source-Monitoring unterstützt. Er ist Mitbegründer des Frameworks Sakuli, welches Tastatur- und Mausaktionen eines "echten" Anwenders simulieren und in Applikations-End2End-Tests automatisch ausführen kann.</p>
+									<p>Simon Meggle arbeitet bei ConSol* in München, wo er Kunden bei allen Themen rund um Open-Source-Monitoring unterstützt. Er ist Mitbegründer des Frameworks Sakuli, welches Tastatur- und Mausaktionen des Anwenders simulieren und in Applikations-End2End-Tests für Nagios automatisch ausführen kann.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
