--- a/en.html
+++ b/en.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin May 14 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
- 
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -40,7 +40,7 @@
 								<ul class="menu">
 									<li><a class="inner-link" href="#about-scroll">Home</a></li><li><a class="inner-link" href="#cfp" target="default">Call for Papers</a></li><li><a href="http://ots15.eventbrite.com" target="default">Tickets</a></li><li><a class="inner-link" href="#speakers" target="default">Speakers</a></li><li><a class="inner-link" href="#venue" target="default">Venue</a></li><li><a class="inner-link" href="#team" target="default">Team</a></li><li><a class="inner-link" href="#team" target="default">Partner</a></li><li><a class="inner-link" href="#about-scroll">Press</a></li>
 									
-									<li><a href="http://opentechsummit.net" target="default">DE</a></li>
+									<li><a href="http://opentechsummit.net" target="_self">DE</a></li>
 									<li class="social-link"><a href="http://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a></li>
 									<li class="social-link"><a href="http://facebook.com/OpenTechSummit" target="default"><i class="icon social_facebook"></i></a></li>
 									
