--- a/index.html
+++ b/index.html
@@ -940,7 +940,42 @@
 								<div class="speaker-description">
 									<h2>Frank Hofmann<br></h2>
 									<span class="sub">lug.berlin</span>
-									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.</p>
+									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.<div><br></div></p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Ricardo Wurmus" src="img/RicardoWurmus.jpg">
+										
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Ricardo Wurmus<br></h2>
+									<span class="sub">GNU Guix</span>
+									<p>Musiker und freier Softwarehacker mit langjähriger Berufserfahrung als GNU / Linux Systemadministrator. Unterstützer des GNU-Projekts, Mitglied der FSFE. Zu seinen Aufgaben gehören das Packaging von Bioinformatik-Software für GNU Guix für die Anwendung am Max-Delbrück-Centrum zu vereinfachen.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Julia Kleeberger" src="img/JuliaKleeberger.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Julia Kleeberger<br></h2>
+									<span class="sub">Gründerin&nbsp;Junge Tüftler</span>
+									<p>Julia ist eine Design-Strategistin mit Doktorabschluss. Sie glaubt an die Weisheit der Hände und daran, dass man Wissen durch eigenes Ausprobieren erfährt. Sie teilt ihre Leidenschaft in Technologie-Workshops und als Dozentin für DIY Seminare an der Kunst &amp; Design-Universität Braunschweig.</p>
 								</div>
 							</div>
 						</div></div>
