--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
 
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -227,6 +228,12 @@
 								<div class="sponsor text-center">
 									<a href="http://twitter.com/opntec" target="default">
 										<img alt="OpenTechSummit" src="img/Logo_OpenTecSummit_Orange-Rectangle.png">
+									</a>
+								</div>
+							</div><div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="https://lpievent.lpice.eu" target="default">
+										<img alt="LPI" src="img/LPI.png">
 									</a>
 								</div>
 							</div>
@@ -940,7 +947,7 @@
 								<div class="speaker-description">
 									<h2>Frank Hofmann<br></h2>
 									<span class="sub">lug.berlin</span>
-									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.<div><br></div></p>
+									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.</p><div><br></div>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
