--- a/en.html
+++ b/en.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin May 14 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
-
+    
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -286,7 +286,7 @@
 								<div class="speaker-description">
 									<h2>Lennart Poettering</h2>
 									<span class="sub">Developer systemd</span>
-									<p>Lennart arbeitet bei Red Hat an Technologien für den Linux-Desktop. Er ist Entwickler bekannter Projekte, wie PulseAudio und systemd. Poettering ist bekannt dafür vor kontroversen Designentscheidungen nicht zurückzuschrecken.</p>
+									<p>Lennart grew up in Brazil and Germany. He is well-known as the initiator, developer and maintainer of software projects, which have been widely adopted in many Linux distributions.</p>
 								</div>
 							</div>
 						</div>
@@ -352,7 +352,7 @@
 								<div class="speaker-description">
 									<h2>Georg Fritzsche<br></h2>
 									<span class="sub">Mozilla Firefox-Ingenieur</span>
-									<p>Georg ist ein Mozilla Platform-Ingenieur der an Firefox für Desktops arbeitet. Georg lebt in Berlin. Er ist aktiv in der OptenTech Community und unterstützt Projekte wie den Afrika Hacktrip.</p>
+									<p>Georg is a Mozilla Platform engineer engineer who works on Firefox for Desktops. Georg lives in Berlin. He is active in the OptenTech Community and supports projects like the Africa hack trip.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -492,7 +492,7 @@
 								<div class="speaker-description">
 									<h2>Stefan Koehler</h2>
 									<span class="sub">Limux-Projekt München</span>
-									<p>Stefan arbeitet als Software-Consultant bei Projekten wie dem Limux-Projekt der Stadt München. Er interessiert sich zudem für Mozart und Open Hardware-Projekte für Kinder, sowie die Shanzai-Produktion in China.</p>
+									<p>Stefan works as a software consultant for projects like LiMux of the city of Munich. He is interested in classical music of Mozart and Open Hardware for kids as well as the Shanzai production in China.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -532,7 +532,7 @@
 								<div class="speaker-description">
 									<h2>Jürgen Neumann<br></h2>
 									<span class="sub">Gründer Freifunk</span>
-									<p>Jürgen ist Gründungsmitglied des Fördervereins freie Netzwerke e.V. und Mit-Initiator von freifunk.net. Er hat als IT-Spezialist seit 1990 für zahlreiche kommerzielle und nicht-kommerzielle Projekte gearbeitet.</p>
+									<p>Jürgen is a founding member of the Free Networks Associations and an initiator of Freifunk.net. He has worked for numerous medium and large-scale commercial and non-commercial projects as an IT specialist.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -552,7 +552,7 @@
 								<div class="speaker-description">
 									<h2>Ludovic Dubost<br></h2>
 									<span class="sub">CEO xWiki</span>
-									<p>Ludovic is der Gründer und CEO der XWiki SAS. Er begann seine Karriere als Softwarearchitekt bei Netscape und wurde später CTO bei NetValue. 2004 launchte er XWiki als Business- und Enterprise-Lösung.</p>
+									<p>Ludovic is the Founder and CEO of the XWiki SAS. After finishing his studies at Ecole Polytechnique and Telecom Paris, he began his career at Netscape. He joined NetValue as CTO, where he worked until 2004 when it was purchased by Nielsen / NetRatings, this leading to the launch of XWiki in 2004.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -572,7 +572,7 @@
 								<div class="speaker-description">
 									<h2>Bernd Erk</h2>
 									<span class="sub">CEO Netways</span>
-									<p>Bernd ist Geschäftsführer der NETWAYS Gruppe. Er hat Erfahrung mit Java und Oracle-Datenbanken und kümmert er sich um das Thema Reporting bei NETWAYS und der Open Source-Monitoring-Lösung Icinga.</p>
+									<p>Bernd is the CEO of NETWAYS. He has experience with Java and Oracle-Databases and takes care of reporting at NETWAYS and the Open Source Monitoring solution Icinga.</p>
 								</div>
 							</div>
 						</div>
@@ -614,7 +614,7 @@
 								<div class="speaker-description">
 									<h2>Thomas Tursics<br></h2>
 									<span class="sub">Open Data Entwickler</span>
-									<p>Thomas ist ein OpenData-verrückter Entwickler aus Berlin. Er hat Android und Firefox-Apps entwickelt wie BabyBenamsen und EthnoTier und baut Webseiten wie KiezKarte und Wartezeiten auf Grundlage offener Daten.</p>
+									<p>Thomas is a developer "crazy" for OpenData. He lives in Berlin. He has developed Android and Firefox-Apps including BabyBenamsen and EthnoTier. He builds Websites like KiezKarte and Wartezeiten using Open Data.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -634,7 +634,7 @@
 								<div class="speaker-description">
 									<h2>Frank Lanitz<br></h2>
 									<span class="sub">Developer Geany</span>
-									<p><span>Frank ist einer der Kernentwickler der Entwicklungsumgebung Geany. Er hat zahlreiche Plugins geschrieben u.a. für Latex, Updatechecker, Tableconvert und kümmert sich um die Übersetzungen von Geany. Er ist Mitgründer des Hackspace Jena und hilft bei Freifunk.</span></p>
+									<p>Frank is a core developer of the development environment Geany. He has written numerous Plugin including Latex, Updatechecker, Tableconvert and takes care of translations at Geany. He is the co-founder of the hackspace Jena and supports Freifunk.<br></p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -654,7 +654,7 @@
 								<div class="speaker-description">
 									<h2>Yannick Haan<br></h2>
 									<span class="sub">Netzpolitiker</span>
-									<p>Yannick ist Autor des Buches &nbsp;“Gesellschaft im digitalen Wandel”. Politisch engagiert er sich als Mitglied in der Netzpolitischen Kommission beim SPD Parteivorstand und arbeitet als Wissenschaftlicher Mitarbeiter im Deutschen Bundestag.</p>
+									<p>Yannick is the author of the book &nbsp;“Gesellschaft im digitalen Wandel”. On the political side he is active as a member of the Commission for Net Policies at the Social Democrats Party Board. He works as a scientific assistant at the Deutscher Bundestag.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -674,7 +674,7 @@
 								<div class="speaker-description">
 									<h2>carlo von lynX<br></h2>
 									<span class="sub">Wau Holland Stiftung</span>
-									<p>Dem IRC das /me beigebracht; STERN, ZEIT, SPIEGEL den Start ins Web erleichtert und Certificate Patrol für Firefox angestoßen. Carlo's Chat PSYC lebt heute in secushare's verteiltem sozialem Netzwerkprojekt. Zur Lösung des Überwachungsproblems feilt er an Gesetzgebung und arbeitet an #youbroketheinternet.</p>
+									<p>Carlo contributed to IRC. He developed CMS for stern.de, zeit.de, spiegel.de and published drafts for the federated protocol PSYC. Those ideas are today part of secushare. He helped to get Certificate Patrol for Firefox started, is organizing #youbroketheinternet and working on fixing the net by legislation.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -694,7 +694,7 @@
 								<div class="speaker-description">
 									<h2>André Fiedler<br></h2>
 									<span class="sub">FirefoxOS Apps</span>
-									<p>André ist Mozillian und Entwickler für Mobilapplikationen. Er arbeitet an Anwendungen für das Internet der Dinge. Momentan ist sein Fokus eine Waschmaschinen-App um Strom und Wasser zu sparen.</p>
+									<p>André is a Mozillian and developer for mobile applications. He works on applications for the Internet of Things. Currently his focus is an app for washing machines that helps people to save energy and water.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -714,7 +714,7 @@
 								<div class="speaker-description">
 									<h2>Wan Leung Wong</h2>
 									<span class="sub">Tinyboy 3D-Drucker</span>
-									<p>Wan Leung Wang ist Entwickler des Tinyboy 3D-Kits, einer kostengünstigen 3D-Druck-Lösung für Studenten zum Selberbauen. Er ist Gründungsmitglied der Hong Kong Creative Open Technology Association (HKCOTA), die sich für offene Standards, freie Software, Hardware und Kultur einsetzt.</p>
+									<p><div><div>Wan Leung Wang is a developer of Tinyboy 3D Kits, a cost efficient solution for 3D printing for students that can be assembled by users. He is a founding member of the Hong Kong Creative Open Technology Association (HKCOTA), which is supporting open standards, free software, hardware and culture.</div><div><br></div></div></p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -734,7 +734,7 @@
 								<div class="speaker-description">
 									<h2>Hauke Laging<br></h2>
 									<span class="sub">Crypto für Alle</span>
-									<p>Hauke fördert mit seinem Projekt "Crypto für alle" durch Schulungen und Informationsangebote den Einsatz von Kryptografie, insbesondere an (Hoch)Schulen. Er ist der Initiator des Linux Presentation Day.</p>
+									<p>With his project "Crypto für alle" Hauke supports users to learn about Cryptography. He also offers trainings for the use of cryptography in universities. Hauke is the initiator of the Linux Presentation Day.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -754,7 +754,7 @@
 								<div class="speaker-description">
 									<h2>Nicco Kunzmann<br></h2>
 									<span class="sub">CoderDojo</span>
-									<p>Nicco Kunzmann organisiert Coder Dojos - Klubs für Kinder und Jugendliche, um programmieren zu lernen. Es ist zudem möglich mit Arduinos eigene Hardware-Anwendungen zu bauen, wie z.B. eine Ampelsteuerung mit roten, gelben und grünen LEDs. Mentoren sind da zur Betreuung.</p>
+									<p>Nicco organizes Coder Dojos - clubs for kids and youngster to learn programming. Participants can also learn how to build hardware applications with Arduinos and Rapsberry PIs, e.g. your own traffic lights with red, yellow and green LEDs.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -816,7 +816,7 @@
 								<div class="speaker-description">
 									<h2>Michael Aschauer<br></h2>
 									<span class="sub">Film and Video Artist</span>
-									<p>Michael ist ein Digital-Medienkünstler geboren in Steyr, Österreich. Er studierte in Wien. Er hat eine Reihe von Preisen erhalten wie den Jury's Citation Award (2.Platz) beim Black Maria Film Festival, New Jersey und den Award of Distinction beim Prix Ars Electronica.</p>
+									<p>Michael is a digital media artist from Steyr, Austria. He has studied in Vienna. He has received a number of awards including the Jury's Citation Award (2nd) at the Black Maria Film Festival, New Jersey and the Award of Distinction at the Prix Ars Electronica.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -836,7 +836,7 @@
 								<div class="speaker-description">
 									<h2>Andrea Mayr-Stalder<br></h2>
 									<span class="sub">stitchcode.com</span>
-									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete als Systemadministratorin und Programmiererin bei Internet Service Providern in Wien und New York.</p>
+									<p>Andrea works on artistic and educational Internet projects. She studied visual media in Vienna and has worked as a system admin and programmer at ISPs in Vienna and New York.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -856,7 +856,7 @@
 								<div class="speaker-description">
 									<h2>Simon Meggle<br></h2>
 									<span class="sub">Sakuli Monitoring Specialist</span>
-									<p>Simon Meggle arbeitet bei der Münchner ConSol*, wo er Kunden bei allen Themen rund um Open-Source-Monitoring unterstützt. Er ist Mitbegründer des Frameworks Sakuli, welches Tastatur- und Mausaktionen eines "echten" Anwenders simulieren und in Applikations-End2End-Tests automatisch ausführen kann.</p>
+									<p>Simon Meggle works at the ConSol* in Munich, where he supports customers for topics around Open Source monitoring. He is co-founder of the Framework Sakuli, which simulates keyboard and mouse interactions of a real user and in automatic End2End tests of applications.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -876,7 +876,7 @@
 								<div class="speaker-description">
 									<h2>Armin Medosch<br></h2>
 									<span class="sub">Freie Netze</span>
-									<p>Armin ist Professor an der Fakultät für Medien und Kommunikation an der Sinigundum Universität, Belgrad. Er ist Gründungsherausgeber des Online-Magazin Telepolis (1996-2002) und Author des Buches Freie Netze (2004). Sein neues Buch wird im Frühjahr 2015 bei MIT Press erscheinen.</p><div><br></div>
+									<p>Armin is professor at the faculty of media and communication at the Sinigundum University, Belgrad. He is founding editor of the award winning online magazin Telepolis (1996-2002) and author of the book Freie Netze (2004). His new book will be published in spring 2015 at MIT Press erscheinen.</p><div><br></div>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -896,7 +896,7 @@
 								<div class="speaker-description">
 									<h2>Manuel Schneider<br></h2>
 									<span class="sub">Wikipedia Video</span>
-									<p>Manuel nutzt seit 1995 Linux. Er ist an zahlreichen freien Software- und Open Knowledge-Projekten beteiligt. Er ist ein IT-Autodikakt mit einem Abschluss als Diplom-Ingenieur in Informatik. Er ist Wikipedianer seit 2004, Video-Enthusiast, Initiator des WikiTV-Projekts und Kreativdirektor hinter dem Videoschnitt-Server.</p>
+									<p>Manuel uses Linux sind 1995. He is contributing to a number of free software and Open Knowledge projects. He is an IT-Autodikakt with a degree as a Diplom-Ingenieur in informatics. He is Wikipedian since 2004, video enthusiast, initiator of WikiTV and creative director of the video editing server.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -916,7 +916,7 @@
 								<div class="speaker-description">
 									<h2>Greta Doci<br></h2>
 									<span class="sub">Wikipedia Community</span>
-									<p>Greta studiert Informatik und arbeitet als Entwicklerin. Sie ist Mitglied des Hackerspaces Open Labs Albanien und eine Organisatorin der Open Source Conference Albania. Sie beschäftigt sich mit freiem Wissen in der Wikipedia. Sie liebt Wandern, Reisen und Schokolade :)</p><div><br></div>
+									<p>Greta is a member of the Open Labs Albania hackerspace. She is promoting and working with Open Source/Free Software Technology and a contributor at Wikipedia Albania since 2013. She loves hiking, traveling and chocolates.<div><br></div></p><div><br></div>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -936,11 +936,7 @@
 								<div class="speaker-description">
 									<h2>Jenz Steiner<br></h2>
 									<span class="sub">Piradio</span>
-									<p>Jenz Steiner ist Journalist und Medienaktivist aus Berlin. Seit 1999 
-		macht er eigene Radiosendungen. Er ist Redakteur der Zeitschrift 
-		Telegraph und der Sendung Funkhaus Prenzlauer Berg auf Piradio Berlin. 
-		Seine Spezialgebiete: Grassroots Medien, Piratensender, DYI-Kultur. Er 
-		ist sehr nett. =)</p>
+									<p>Jenz is a journalist and medien activist from Berlin. Since 1999 he has his own radio emissions. He is editor of the Telegraph and "Der Sendung Funkhaus Prenzlauer Berg" at Piradio Berlin. His areas of expertise are: Grassroots Media, Pirate-FM, DYI cultures. He is a pretty nice guy =)</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -960,7 +956,7 @@
 								<div class="speaker-description">
 									<h2>Frank Hofmann<br></h2>
 									<span class="sub">lug.berlin</span>
-									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.</p><div><br></div>
+									<p>Frank is a founding member of the Open Source expert network Büro 2.0 in Berlin. He provides services for print and layout and IT services. He is also an author for Linux magazines and LinuxUser. He is a coordinator of the meetings of the plattform lug.berlin.</p><div><br></div>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
