--- a/en.html
+++ b/en.html
@@ -38,7 +38,7 @@
 					
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-									<li><a class="inner-link" href="#about-scroll">Home</a></li><li><a class="inner-link" href="#cfp" target="default">Call for Papers</a></li><li><a href="http://ots15.eventbrite.com" target="default">Tickets</a></li><li><a class="inner-link" href="#speakers" target="default">Speakers</a></li><li><a class="inner-link" href="#venue" target="default">Venue</a></li><li><a class="inner-link" href="#team" target="default">Team</a></li><li><a class="inner-link" href="#team" target="default">Partner</a></li><li><a class="inner-link" href="#about-scroll">Press</a></li>
+									<li><a class="inner-link" href="#about-scroll">Home</a></li><li><a class="inner-link" href="#cfp" target="default">Call for Papers</a></li><li><a href="http://ots15.eventbrite.com" target="default">Tickets</a></li><li><a class="inner-link" href="#speakers" target="default">Speakers</a></li><li><a class="inner-link" href="#venue" target="default">Venue</a></li><li><a class="inner-link" href="#team" target="default">Team</a></li><li><a class="inner-link" href="#team" target="default">Partner</a></li><li><a class="inner-link" href="#press">Press</a></li>
 									
 									<li><a href="http://opentechsummit.net" target="_self">DE</a></li>
 									<li class="social-link"><a href="http://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a></li>
