--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
 
-
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name="description" content="OpenTechSummit 2015 Berlin - Europe's Premier Open Technology Event">
+        <meta name="keywords" content="OpenTechSummit, Open Technology, Open Source, Open Hardware, Open Data, Open Knowledge, Berlin, Germany, Europe">
+        <meta name="author" content="OpenTechSummit">
+        <meta property="og:title" content="OpenTechSummit 15" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="" />
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@opntec">
+        <meta name="twitter:title" content="OpenTechSummit">
+        <meta name="twitter:description" content="OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data">
+        <meta name="twitter:creator" content="@opntec">
+        <meta name="twitter:image" content="">
+
+        <link rel="shortcut icon" href="ots.ico" type="image/x-icon" />
+
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/elegant-icons.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -14,7 +29,19 @@
         <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/theme-properorange.css" rel="stylesheet" type="text/css" media="all"/>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
+
+        <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-17146009-7', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
     </head>
+
     <body class="no-loader">
     
     	<div class="loader">
